# hepinfo

./: .gitignore  .gitmodules  Dockerfile  README.md  load_hls4ml_report.py  load_model.py  pyproject.toml  run_MiVAE.py  run_binaryMI.py  run_hls4ml.py
data/: extract_data.py
hepinfo/: util.py
hepinfo/models/: BaseModel.py  BinaryMI.py  DebiasClassifier.py  GradReverse.py  MiVAE.py  QuantFlow.py  qkerasV3.py
notebooks/: axol1tl-example.ipynb  co2_per_epoch.ipynb  simulation_gridsearch.ipynb  tau_3mu.ipynb
run/: load_model.py  run_MiVAE.py  run_binaryMI.py  run_hls4ml.py
synthesis/: syn_supervised_model.py
tb/: Makefile  bernoulli.h  bernoulli_layer.h  bernoulli_layer.vhd  bernoulli_layer_tb.cpp  bernoulli_layer_tb.vhd  bernoulli_lfsr.cpp  bernoulli_lfsr_tb.cpp
testing/: test_supervised_model.py
trained_models/: binaryMI_full.keras  binaryMI_qkeras.keras  binaryMI_quantflow.keras  binaryMI_squark.keras  test_keras.h5  test_keras.keras  test_qkeras.keras
trained_models/SuperBinaryMI-0/: history-split-0.json  history-split-1.json  history-split-2.json  hps.json  model-split-0.keras  model-split-1.keras  model-split-2.keras  results.json
trained_models/SuperBinaryMI-1/: history-split-0.json  history-split-1.json  history-split-2.json  hps.json  model-split-0.keras  model-split-1.keras  model-split-2.keras  results.json
trained_models/SuperBinaryMI-10/: history-split-0.json  history-split-1.json  history-split-2.json  hps.json  model-split-0.keras  model-split-1.keras  (+2 more)
training/: binarymi_test_hps.json  create_gridsearch.py  debias_test_hps.json  train_supervised_model.py
(+72 files in other folders)
