[project]
name = "hepinfo"
version = "0.0.1"
authors = [
  { name="Anonymous", email="Anonymous@Anonymous.com" }
]
description = "Mutual Information techniques for decorrelation of physics data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=42", "wheel", "six", "tensorflow", "qkeras"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hepinfo"]
package-dir = {"" = "."}

[project.urls]
Homepage = "https://anonymous.com"
Issues = "https://anonymous.com"